[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://UI/SisterClick.png" type="Texture" id=2]
[ext_resource path="res://UI/SplashScreen.png" type="Texture" id=3]
[ext_resource path="res://UI/brothernull.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=5]
[ext_resource path="res://UI/SisterNull.png" type="Texture" id=6]
[ext_resource path="res://UI/BrotherClick.png" type="Texture" id=7]
[ext_resource path="res://SFX/jingle.wav" type="AudioStream" id=8]
[ext_resource path="res://UI/Settings.png" type="Texture" id=9]
[ext_resource path="res://UI/SettingsClick.png" type="Texture" id=10]
[ext_resource path="res://Music/mainmenutheme.ogg" type="AudioStream" id=11]

[sub_resource type="Animation" id=2]
resource_name = "auto"
length = 6.2
tracks/0/type = "value"
tracks/0/path = NodePath("Nahar - The Pastel Set:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 4.9, 6.09, 6.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1e-05 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 5.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.1272
margin_top = -3.5636
margin_right = -7.1272
margin_bottom = -3.5636
mouse_filter = 2
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.168627 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Play" type="TextureButton" parent="."]
margin_left = 685.127
margin_top = 218.564
margin_right = 1005.13
margin_bottom = 832.564
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )

[node name="Exit" type="TextureButton" parent="."]
margin_left = 964.127
margin_top = 218.564
margin_right = 1287.13
margin_bottom = 854.564
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Settings" type="TextureButton" parent="."]
margin_left = 666.127
margin_top = 888.564
margin_right = 1296.13
margin_bottom = 1109.56
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "auto"
anims/auto = SubResource( 2 )

[node name="Nahar - The Pastel Set" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 964.127, 544.564 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0
bus = "SFX"

[node name="MenuOST" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
bus = "Music"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
